--- a/themes/supermint/css/presets/defaults.less
+++ b/themes/supermint/css/presets/defaults.less
@@ -1,7 +1,5 @@
 @preset-name: "Supermint";
 @preset-icon: concrete-icon(#18aedf, #373B40, #bac9d3);
-// @preset-fonts-file: "build/fonts/defaults.less";
-
 
 // -- Global color -- \\
 
@@ -49,9 +47,9 @@
 
 // -- Global Page -- \\
 
-	@body-bg-color:             #fff;
-	@body-bg-pattern-image:     '../../images/patterns/noise.png'; 
-	@boxed-bg-color: 			#fff;
+	@body-bg-color:         #fff;
+	@body-bg-pattern-image: '../../images/patterns/noise.png';
+	@boxed-bg-color: 				#fff;
 	@content-bg-color: 			#fff;
 	@sub-header-color: 			#fff;
 	@top-bar-bg-color: 			@quaternary-color;
@@ -59,8 +57,8 @@
 // -- Navigation -- \\
 
 	@top-nav-bg-color : 		@quaternary-color;
-	@top-nav-a-color : 			@white-color;
-	@top-nav-darken : 			darken(@quaternary-color, 10%);
+	@top-nav-a-color : 			contrast(@top-nav-bg-color,@black-color,@white-color);
+	@top-nav-darken : 			darken(@top-nav-bg-color, 10%);
 	@top-nav-bg-hover-color:	@top-nav-darken;
 	@top-nav-hover-a-color: 	@white-color;
 
@@ -71,10 +69,10 @@
 	@nav-slide-text-color : 	@nav-slide-contrast;
 
 	@top-nav-height-size: 		36px;
-	@fixed-bar-height : 		7.2rem;	
+	@fixed-bar-height : 		7.2rem;
 
 	@nav-dropdown-bg-color: 	@quaternary-color;
-	@nav-dropdown-a-color : 	@white-color;
+	@nav-dropdown-a-color : 	contrast(@nav-dropdown-bg-color,@black-color,@white-color);
 	@nav-megamenu-bg-color: 	@white-color;
 
 	@lateral-nav-bg-color : @quaternary-color;
@@ -109,7 +107,7 @@
 	@body-font-size 		: 16px;
 	@font-size-base 		: @body-font-size;
 	@line-height-base 		: 1.7;
-	@line-height-computed 	: floor((@font-size-base * @line-height-base)); // ~20px	
+	@line-height-computed 	: floor((@font-size-base * @line-height-base)); // ~20px
 	@font-size-large 		: 1.7rem;
 	@font-size-small 		: 1.3rem;
 	// links
@@ -133,7 +131,7 @@
 	@pre-border-color:  @light-color;
 
 	@code-color: 		#c7254e;
-	@code-bg:          	@light-color;	
+	@code-bg:          	@light-color;
 	@breadcrumb-separator:          "/";
 
 // -- Sizes ! -- \\
@@ -196,4 +194,3 @@
 // -- Heritage -- \\
 
 @white : @white-color;
-
