Fix 5.7.4 less issues
Creation d’une variable contrast pour chaque variable présente dans le
style.xml

--- a/themes/supermint/css/presets/business.less
+++ b/themes/supermint/css/presets/business.less
@@ -56,28 +56,30 @@
 
 // -- Navigation -- \\
 
-	@top-nav-bg-color : 		@quaternary-color;
-	@top-nav-a-color : 			@white-color;
-	@top-nav-darken : 			darken(@quaternary-color, 10%);
-	@top-nav-bg-hover-color:	@top-nav-darken;
-	@top-nav-hover-a-color: 	@white-color;
+@top-nav-bg-color : 		@quaternary-color;
+@top-nav-contrast : 		contrast(@top-nav-bg-color,@black-color,@white-color);
+@top-nav-a-color : 			@top-nav-contrast;
+@top-nav-darken : 			darken(@top-nav-bg-color, 10%);
+@top-nav-bg-hover-color:	@top-nav-darken;
+@top-nav-hover-a-color: 	@white-color;
 
-	@nav-slide-image : 			'../../images/patterns/fabric_of_squares_gray_for_dark.png';
-	@nav-slide-bg-color : 		@quaternary-color;
-	@nav-slide-contrast : 			contrast(@nav-slide-bg-color, @black-color, @white-color);
-	@nav-slide-a-color : 		@nav-slide-contrast;
-	@nav-slide-text-color : 	@nav-slide-contrast;
+@nav-slide-image : 				'../../images/patterns/fabric_of_squares_gray_for_dark.png';
+@nav-slide-bg-color : 		@quaternary-color;
+@nav-slide-contrast : 		contrast(@nav-slide-bg-color, @black-color, @white-color);
+@nav-slide-a-color : 		@nav-slide-contrast;
+@nav-slide-text-color : 	@nav-slide-contrast;
 
-	@top-nav-height-size: 		36px;
-	@fixed-bar-height : 		7.2rem;
+@top-nav-height-size: 		36px;
+@fixed-bar-height : 		7.2rem;
 
-	@nav-dropdown-bg-color: 	@quaternary-color;
-	@nav-dropdown-a-color : 	@white-color;
-	@nav-megamenu-bg-color: 	@white-color;
+@nav-dropdown-bg-color: 	@quaternary-color;
+@nav-dropdown-contrast : 	contrast(@nav-dropdown-bg-color,@black-color,@white-color);
+@nav-dropdown-a-color : 	@nav-dropdown-contrast;
+@nav-megamenu-bg-color: 	@white-color;
 
-	@lateral-nav-bg-color : @quaternary-color;
-	@lateral-nav-sub-bg-color : @light-color;
-	@lateral-nav-width : 300px;
+@lateral-nav-bg-color : @quaternary-color;
+@lateral-nav-sub-bg-color : @light-color;
+@lateral-nav-width : 300px;
 
 // -- Footer -- \\
 
