Fix Navigations issues

--- a/themes/supermint/css/presets/portfolied.less
+++ b/themes/supermint/css/presets/portfolied.less
@@ -1,10 +1,10 @@
 @preset-name: "Portfolied";
-@preset-icon: concrete-icon(#FF784F, #7EA172, #3A3042);
+@preset-icon: concrete-icon(#FF784F, #779FA1, #3A3042);
 
 // -- Global color -- \\
 
 	@primary-color : 		#FF784F;
-	@secondary-color : 		#7EA172;
+	@secondary-color : 		#779FA1;
 	@tertiary-color : 		#F2F4F3; // A light color // edf4f4
 	@quaternary-color : 	#3A3042; // A darker color
 
