Add a option to make regular nav FLAT

--- a/themes/supermint/css/presets/defaults.less
+++ b/themes/supermint/css/presets/defaults.less
@@ -59,9 +59,9 @@
 	@top-nav-bg-color : 		@quaternary-color;
 	@top-nav-contrast : 		contrast(@top-nav-bg-color,@black-color,@white-color);
 	@top-nav-a-color : 			@top-nav-contrast;
-	@top-nav-darken : 			darken(@top-nav-bg-color, 10%);
+	@top-nav-darken : 			darken(@top-nav-bg-color, 5%);
 	@top-nav-bg-hover-color:	@top-nav-darken;
-	@top-nav-hover-a-color: 	@white-color;
+	@top-nav-hover-a-color: 	@top-nav-a-color;
 
 	@nav-slide-image : 				'../../images/patterns/fabric_of_squares_gray_for_dark.png';
 	@nav-slide-bg-color : 		@quaternary-color;
