--- a/themes/supermint/css/presets/business.less
+++ b/themes/supermint/css/presets/business.less
@@ -59,7 +59,7 @@
 @top-nav-bg-color : 		@quaternary-color;
 @top-nav-contrast : 		contrast(@top-nav-bg-color,@black-color,@white-color);
 @top-nav-a-color : 			@top-nav-contrast;
-@top-nav-darken : 			darken(@top-nav-bg-color, 10%);
+@top-nav-darken : 			darken(@top-nav-bg-color, 5%);
 @top-nav-bg-hover-color:	@top-nav-darken;
 @top-nav-hover-a-color: 	@white-color;
 
@@ -75,7 +75,7 @@
 @nav-dropdown-bg-color: 	@quaternary-color;
 @nav-dropdown-contrast : 	contrast(@nav-dropdown-bg-color,@black-color,@white-color);
 @nav-dropdown-a-color : 	@nav-dropdown-contrast;
-@nav-megamenu-bg-color: 	@white-color;
+@nav-megamenu-bg-color: 	@top-nav-a-color;
 
 @lateral-nav-bg-color : @quaternary-color;
 @lateral-nav-sub-bg-color : @light-color;
