Update full screen nav
- Remove the home icon
- Add a option for font size
- Add a option for the background color + add contrast for text

--- a/themes/supermint/css/presets/defaults.less
+++ b/themes/supermint/css/presets/defaults.less
@@ -71,6 +71,7 @@
 
 	@top-nav-height-size: 		36px;
 	@fixed-bar-height : 		7.2rem;
+	@full-screen-nav-bg-color : @primary-color;
 
 	@nav-dropdown-bg-color: 	@quaternary-color;
 	@nav-dropdown-contrast : 	contrast(@nav-dropdown-bg-color,@black-color,@white-color);
