Move Mmenu-theme to less

--- a/themes/supermint/css/main.less
+++ b/themes/supermint/css/main.less
@@ -25,6 +25,7 @@
 
 /* Import Addons */
 @import "build/addons/slick-theme.less";
+@import "build/addons/mmenu-theme.less";
 @import "addons/button/button-util.less";
 @import "addons/button/button-flat.less";
 @import "addons/button/button-plain.less";
