--- a/themes/supermint/css/presets/business.less
+++ b/themes/supermint/css/presets/business.less
@@ -62,6 +62,7 @@
 @top-nav-darken : 			darken(@top-nav-bg-color, 5%);
 @top-nav-bg-hover-color:	@top-nav-darken;
 @top-nav-hover-a-color: 	@white-color;
+@bg-nav-selected-color: 	@primary-color;
 
 @nav-slide-image : 				'../../images/patterns/fabric_of_squares_gray_for_dark.png';
 @nav-slide-bg-color : 		@quaternary-color;
