--- a/themes/supermint/css/presets/portfolied.less
+++ b/themes/supermint/css/presets/portfolied.less
@@ -44,6 +44,8 @@
 	@state-danger-bg:                hsl(hue(@danger-color),saturation(@danger-color),90%);
 	@state-danger-border:            darken(spin(@state-danger-bg, -10), 5%);
 
+	@feature-icon-color : 					@black-color;
+
 // -- Global Page -- \\
 
 	@body-bg-color:             #F2F4F3;
