Fix dots colors in IE10+
https://www.concrete5.org/marketplace/themes/supermint-3/support/slider/

--- a/themes/supermint/css/main.less
+++ b/themes/supermint/css/main.less
@@ -39,8 +39,8 @@
 
 /* Misc */
 @import "build/misc.less";
-/* Fixing */
-@import "build/c5fix.less";
 
 // jQuery addons
 @import "build/addons.less";
+/* Fixing */
+@import "build/hacks.less";
