Add a color option for text in stack panes

--- a/themes/supermint/css/presets/business.less
+++ b/themes/supermint/css/presets/business.less
@@ -79,7 +79,8 @@
 @nav-dropdown-bg-color: 	@quaternary-color;
 @nav-dropdown-contrast : 	contrast(@nav-dropdown-bg-color,@black-color,@white-color);
 @nav-dropdown-a-color : 	@nav-dropdown-contrast;
-@nav-megamenu-bg-color: 	@top-nav-a-color;
+@nav-megamenu-bg-color: 	#fff;
+@nav-megamenu-text-color :@body-type-color;
 
 @lateral-nav-bg-color : @quaternary-color;
 @lateral-nav-sub-bg-color : @light-color;
