--- a/themes/supermint/css/presets/portfolied.less
+++ b/themes/supermint/css/presets/portfolied.less
@@ -79,6 +79,7 @@
 @nav-dropdown-contrast : 	contrast(@nav-dropdown-bg-color,@black-color,@white-color);
 @nav-dropdown-a-color : 	@nav-dropdown-contrast;
 @nav-megamenu-bg-color: 	@white-color;
+@nav-megamenu-text-color :@body-type-color;
 
 @lateral-nav-bg-color : @quaternary-color;
 @lateral-nav-sub-bg-color : @light-color;
