Add a print CSS

--- a/themes/supermint/css/main.less
+++ b/themes/supermint/css/main.less
@@ -40,6 +40,9 @@
 /* Misc */
 @import "build/misc.less";
 
+/* Print */
+@import "build/print.less";
+
 // jQuery addons
 @import "build/addons.less";
 /* Fixing */
